--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://Cyntia0814:Analu2022@master.wfcqwph.mongodb.net/movies?retryWrites=true
-
-spring.data.mongodb.database=movies
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=databas2
